--- a/.npmrc
+++ b/.npmrc
@@ -2,3 +2,4 @@ always-auth=true
 save-exact=true
 
 @alexandernanberg:registry=https://npm.pkg.github.com
+//npm.pkg.github.com/:_authToken=${GITHUB_TOKEN}
